--- a/about.html
+++ b/about.html
@@ -43,10 +43,11 @@
     <div id="childOne">
         <img src="https://cdn.mos.cms.futurecdn.net/YNNprXANN8um6qmvJWdnKQ.gif" id="imgeone"/>
 
-
+        <div id="para">
         <p>In the early 19th century, inventors and scientists like Michael Faraday and Thomas Davenport conducted experiments with electric propulsion, leading to the development of early electric motors and batteries.
        Electric cars gained popularity in the early 20th century, especially among urban dwellers. They were considered a clean and quiet alternative to gasoline-powered vehicles. 
        </p>
+        </div>
 
     </div>
     <hr>
